#6 Using Class<T>clazz in getNumbers() methods ; some transversal changes